; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_memory.c_safe_malloc_mul_2op_p.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_memory.c_safe_malloc_mul_2op_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIZE_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @safe_malloc_mul_2op_p(i64 %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %8, %2
  %12 = call i8* @malloc(i64 1)
  store i8* %12, i8** %3, align 8
  br label %25

13:                                               ; preds = %8
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* @SIZE_MAX, align 8
  %16 = load i64, i64* %5, align 8
  %17 = udiv i64 %15, %16
  %18 = icmp ugt i64 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i8* null, i8** %3, align 8
  br label %25

20:                                               ; preds = %13
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = mul i64 %21, %22
  %24 = call i8* @malloc(i64 %23)
  store i8* %24, i8** %3, align 8
  br label %25

25:                                               ; preds = %20, %19, %11
  %26 = load i8*, i8** %3, align 8
  ret i8* %26
}

declare dso_local i8* @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
